--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="shoe-3.jpg" alt="..." style="width:16.8em;height:16.8em;"/>
+                            <img class="card-img-top" src="shoe-3.jpg" alt="..." style="width:100%;height:16.8em;"/>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -110,7 +110,7 @@
                             <!-- Sale badge-->
                             
                             <!-- Product image-->
-                            <img class="card-img-top" src="flip-1.jpg" alt="..." style="width:16.8em;height:16.8em;" />
+                            <img class="card-img-top" src="flip-1.jpg" alt="..." style="width:100%;height:16.8em;" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -130,7 +130,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="shirt-1.jpg" alt="..." style="width:16.8em;height:16.8em;"/>
+                            <img class="card-img-top" src="shirt-1.jpg" alt="..." style="width:100%;height:16.8em;"/>
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
