--- a/shoes.html
+++ b/shoes.html
@@ -14,7 +14,7 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="shoe-5.jpg" alt="..." style="width:100%;height:16.8em;"/>
+                        <img class="card-img-top" src="shoe-5.jpg" alt="..." style="width:100%;height:14em;"/>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -35,7 +35,7 @@
                         <!-- Sale badge-->
                        <!--  <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>-->
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." style="width:100%;height:16.8em;" />
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." style="width:100%;height:14emem;" />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -65,7 +65,7 @@
                         <!-- Sale badge-->
                         
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." style="width:16.8em;height:16.8em;" />
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." style="width:100%;height:14em;" />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -85,12 +85,12 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." style="width:16.8em;height:16.8em;"/>
+                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." style="width:100%;height:14em"/>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Popular Item</h5>
+                                <h5 class="fw-bolder">Brand</h5>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
